<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SellPotato</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ingreso_rut">Ingresar Rut: 12345678-9</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="aceptar">Aceptar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="domicilio">Dirección</string>
    <string name="descripcionhogar">Descripcion de Hogar</string>
    <string name="r_telfono">Telefono</string>
    <string name="r_descripcion">Descripcion</string>
    <string name="title_activity_login__in">Login_In</string>
    <string name="pedidos">Pedidos</string>
    <string name="pagarPededos">Pagar Pedidos</string>
    <string name="salir">Salir</string>
    <string name="title_activity_crear_pedido">CrearPedido</string>
    <string name="title_activity_ver_pedido">VerPedido</string>
    <string name="title_activity_cancelar_pedido">CancelarPedido</string>
    <string name="title_activity_pago_online">PagoOnline</string>
    <string name="title_activity_pago_contra_entrega">PagoContraEntrega</string>

</resources>
