<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sellpotato.sellpotato.Registro"
    android:background="#f5ffb800">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:hint="@string/nombre"
        android:background="#ffffffff"
        android:singleLine="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/apellido"
        android:textSize="24sp"
        android:hint="@string/apellido"
        android:background="#ffffffff"
        android:singleLine="true"
        android:layout_below="@+id/nombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rut_registro"
        android:hint="@string/ingreso_rut"
        android:background="#ffffffff"
        android:textSize="24sp"
        android:singleLine="true"
        android:layout_below="@+id/apellido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domicilio"
        android:hint="@string/domicilio"
        android:background="#ffffffff"
        android:textSize="24sp"
        android:singleLine="true"
        android:layout_below="@+id/rut_registro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/r_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="24sp"
        android:background="#ffc5ff00" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/r_registro"
        android:layout_alignTop="@+id/r_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:background="#ffc5ff00" />


</RelativeLayout>
