<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sellpotato.sellpotato.Login_In"
    android:background="#f5ffb800">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usrLayout"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/l_nombre"
                android:textSize="24sp"
                android:background="#ffffffff"
                android:layout_weight="1.03" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellido_l"
                android:background="#ffffffff"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fono_l"
                android:background="#ffffffff"
                android:textSize="24sp"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/direccion_l"
                android:background="#ffffffff"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedidos"
                android:id="@+id/pedidos"
                android:background="#ffc5ff02"
                android:layout_marginTop="44dp"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pagarPededos"
                android:id="@+id/pagar"
                android:background="#ffc5ff02"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:id="@+id/salirbutton"
        android:layout_alignBottom="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:background="#ffc5ff02" />

</RelativeLayout>
